<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">LvYouSystem</string>
    <string name="action_settings">设置</string>
    <string name="LogIn">登陆</string>    
    <string name="ByKitKat">By KitKat~</string>
    <string name="SignUp">注册</string>    
    
    <string name="Uname">用户名</string>
    <string name="etuname">请输入用户名</string>
    <string name="Psd">密码</string>
    <string name="etpswd">请输入密码</string>
    <string name="cfpswd">确认</string>	
	<string name="etcfpswd">再次输入密码</string>
	<string name="Tname">姓名</string>
	<string name="etTname">请输入真实姓名</string>
	<string name="age">年龄</string>
	<string name="etage">请输入年龄</string>
	<string name="work">职业</string>
	<string name="etwork">请输入职业</string>
	<string name="phone">电话</string>
	<string name="etphone">请输入电话</string>
	<string name="email">邮箱</string>
	<string name="etemail">请输入电子邮箱</string>	
	
	<string name="SupSuc">注册成功！！欢迎使用！！</string>
	
	<string name="submit">提交</string>
	<string name="location">想去的的地方</string>
	<string name="etlocation">请输入您的目的地</string>
	<string name="pnum">人数</string>
	<string name="etpnum">请输入想组队的人数</string>
	<string name="money">预算</string>
	<string name="etmoney">请输入这次旅行的预算</string>
	
	<string name="sea_res">显示搜索结果</string>
	<string name="inmap">进入地图</string>
	<string name="vself">个人信息</string>
	<string name="cself">信息修改</string>
	<string name="steam">搜索队伍</string>
	<string name="cteam">创建队伍</string>
	<string name="my_location">My Location</string>
	
	<string name="cname">目的城市</string>
	<string name="etcname">请输入目的城市</string>
	<string name="stime">开始时间</string>
	<string name="etstime">格式：2013-01-01</string>
	<string name="etime">结束时间</string>
	<string name="etetime">格式：2013-01-01</string>
	<string name="nmem">人  数</string>
	<string name="etnmem">请输入人数</string>
	<string name="creteam">创建</string>
	
	<string name="search">搜索</string>
	
	<string name="syrs">剩余人数</string>
	<string name="inteam">加入队伍</string>
	
	<string name="Enter">进入</string>
	<string name="Return">返回</string>
</resources>
