<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/lcinfo"
    android:gravity="left">

    <TextView
        android:id="@+id/uname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        android:textSize="9pt"     
        android:text="@string/Uname" />
    
    <EditText 
        android:id="@+id/etuname"
        android:hint="@string/etuname"
        android:width="250dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/uname"
        android:layout_alignBottom="@id/uname"
        android:layout_marginLeft="10dp"
        android:selectAllOnFocus="true"/>
    
    <TextView
        android:id="@+id/psd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        android:layout_below="@id/uname"
        android:textSize="9pt"     
        android:text="@string/Psd" />
    
    <EditText 
        android:id="@+id/etpswd"
        android:hint="@string/etpswd"
        android:width="250dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/psd"
        android:layout_alignBottom="@id/psd"
        android:layout_marginLeft="30dp"
        android:selectAllOnFocus="true"/>
    
    <TextView
        android:id="@+id/cfpswd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        android:layout_below="@id/psd"
        android:textSize="9pt"     
        android:text="@string/cfpswd" />
    
    <EditText 
        android:id="@+id/etcfpswd"
        android:hint="@string/etcfpswd"
        android:width="250dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/cfpswd"
        android:layout_alignBottom="@id/cfpswd"
        android:layout_marginLeft="30dp"
        android:selectAllOnFocus="true"/>
    
    <TextView
        android:id="@+id/tname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        android:layout_below="@id/cfpswd"
        android:textSize="9pt"     
        android:text="@string/Tname" />
    
    <EditText 
        android:id="@+id/ettname"
        android:hint="@string/etTname"
        android:width="250dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/tname"
        android:layout_alignBottom="@id/tname"
        android:layout_marginLeft="30dp"
        android:selectAllOnFocus="true"/>
    
    <TextView
        android:id="@+id/age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        android:layout_below="@id/tname"
        android:textSize="9pt"     
        android:text="@string/age" />
    
    <EditText 
        android:id="@+id/etage"
        android:hint="@string/etage"
        android:width="250dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/age"
        android:layout_alignBottom="@id/age"
        android:layout_marginLeft="30dp"
        android:selectAllOnFocus="true"/>
    
    <TextView
        android:id="@+id/work"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        android:layout_below="@id/age"
        android:textSize="9pt"     
        android:text="@string/work" />
    
    <EditText 
        android:id="@+id/etwork"
        android:hint="@string/etwork"
        android:width="250dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/work"
        android:layout_alignBottom="@id/work"
        android:layout_marginLeft="30dp"
        android:selectAllOnFocus="true"/>
    
    <TextView
        android:id="@+id/phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        android:layout_below="@id/work"
        android:textSize="9pt"     
        android:text="@string/phone" />
    
    <EditText 
        android:id="@+id/etphone"
        android:hint="@string/etphone"
        android:width="250dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/phone"
        android:layout_alignBottom="@id/phone"
        android:layout_marginLeft="30dp"
        android:selectAllOnFocus="true"/>
    
    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        android:layout_below="@id/phone"
        android:textSize="9pt"     
        android:text="@string/email" />
    
    <EditText 
        android:id="@+id/etemail"
        android:hint="@string/etemail"
        android:width="250dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/email"
        android:layout_alignBottom="@id/email"
        android:layout_marginLeft="30dp"
        android:selectAllOnFocus="true"/>
    
     <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/submit" />

</RelativeLayout>
