<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:shrinkColumns="0, 2"
    >
    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:id="@+id/uname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:text="@string/Uname" />

        <EditText android:id="@+id/etuname"
            android:hint="@string/etuname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:selectAllOnFocus="true"
            />
    </TableRow>
    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        >
        <TextView android:id="@+id/psd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Psd"
            android:ellipsize="end"
            />
        <EditText android:id="@+id/etpswd"
            android:hint="@string/etpswd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:selectAllOnFocus="true"
            />
    </TableRow>

    <Button
        android:id="@+id/enter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Enter" />
    
</TableLayout>
