<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/llsuc"
>
    
    <Button
        android:id="@+id/vself"
        style="@style/AppTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="100dp"
        android:text="@string/vself" />

    <Button
        android:id="@+id/cself"
        style="@style/AppTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="240dp"
        android:layout_marginTop="100dp"
        android:text="@string/cself" />
    
    <Button
        android:id="@+id/inmap"
        style="@style/AppTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/inmap" />
    
    <Button
        android:id="@+id/cteam"
        style="@style/AppTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/vself"
        android:layout_below="@+id/inmap"
        android:layout_marginTop="74dp"
        android:text="@string/cteam" />

    <Button
        android:id="@+id/steam"
        style="@style/AppTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/cteam"
        android:layout_alignRight="@id/cself"
        android:text="@string/steam" />

    
    
</RelativeLayout>
