<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/lmain"
    android:gravity="left"
    android:background="@drawable/main">

    <Button
        android:id="@+id/login"
        style="@style/AppTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@+id/sgup"
        android:text="@string/LogIn" />

    <Button
        android:id="@+id/sgup"
        style="@style/AppTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/SignUp" />

    <TextView
        android:id="@+id/maincname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/mainpname"
        android:layout_marginRight="31dp"
        android:layout_marginTop="56dp"
        android:text="@string/ByKitKat"
        android:textColor="#ffffffff"
        android:textSize="10pt" />

    <TextView
        android:id="@+id/mainpname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="135dp"
        android:layout_toLeftOf="@+id/sgup"
        android:text="@string/app_name"
        android:textColor="#ffffffff"
        android:textSize="20pt" />

</RelativeLayout>
