<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/linteam"
    android:gravity="left">
    
    <TextView
        android:id="@+id/uname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        android:textSize="9pt"     
        android:text="@string/Uname" />
    
    <EditText 
        android:id="@+id/etuname"
        android:width="250dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/uname"
        android:layout_alignBottom="@id/uname"
        android:editable="false"
        android:cursorVisible="false"
        android:layout_marginLeft="30dp"/>
    
    <TextView
        android:id="@+id/phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        android:layout_below="@id/uname"
        android:textSize="9pt"     
        android:text="@string/phone" />
    
    <EditText 
        android:id="@+id/etphone"
        android:width="250dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/phone"
        android:layout_alignBottom="@id/phone"
        android:layout_alignLeft="@id/etuname"
        android:editable="false"
        android:cursorVisible="false"/>
    
    <TextView
        android:id="@+id/cname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        android:layout_below="@id/phone"
        android:textSize="9pt"     
        android:text="@string/cname" />
    
    <EditText 
        android:id="@+id/etcname"
        android:width="250dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/cname"
        android:layout_alignBottom="@id/cname"
        android:layout_alignLeft="@id/etuname"
        android:editable="false"
        android:cursorVisible="false"/>
    
    <TextView
        android:id="@+id/stime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        android:layout_below="@id/cname"
        android:textSize="9pt"     
        android:text="@string/stime" />
    
    <EditText 
        android:id="@+id/etstime"
        android:width="250dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/stime"
        android:layout_alignBottom="@id/stime"
        android:layout_alignLeft="@id/etuname"
        android:editable="false"
        android:cursorVisible="false"/>
    
    <TextView
        android:id="@+id/etime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        android:layout_below="@id/stime"
        android:textSize="9pt"     
        android:text="@string/etime" />
    
    <EditText 
        android:id="@+id/etetime"
        android:width="250dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/etime"
        android:layout_alignBottom="@id/etime"
        android:layout_alignLeft="@id/etuname"
        android:editable="false"
        android:cursorVisible="false"/>
    
    <TextView
        android:id="@+id/nmem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        android:layout_below="@id/etime"
        android:textSize="9pt"     
        android:text="@string/nmem" />
    
    <EditText 
        android:id="@+id/etnmem"
        android:width="250dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/nmem"
        android:layout_alignBottom="@id/nmem"
        android:layout_alignLeft="@id/etuname"
        android:editable="false"
        android:cursorVisible="false"/>
    
    <TextView
        android:id="@+id/syrs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        android:layout_below="@id/nmem"
        android:textSize="9pt"     
        android:text="@string/syrs" />
    
    <EditText 
        android:id="@+id/etsyrs"
        android:width="250dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/syrs"
        android:layout_alignBottom="@id/syrs"
        android:layout_alignLeft="@id/etuname"
        android:editable="false"
        android:cursorVisible="false"/>
    
    <Button
        android:id="@+id/inteam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/syrs"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="56dp"
        android:text="@string/inteam"
        android:width="300dp" />

</RelativeLayout>
