<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/linfo"
    android:gravity="left" >
    
	<TextView
        android:id="@+id/uname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        android:textSize="9pt"     
        android:text="@string/Uname" />
    
    <EditText 
        android:id="@+id/etuname"
        android:width="250dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/uname"
        android:layout_alignBottom="@id/uname"
        android:editable="false"
        android:cursorVisible="false"
        android:layout_marginLeft="10dp"/>
    
    <TextView
        android:id="@+id/tname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        android:layout_below="@id/uname"
        android:textSize="9pt"     
        android:text="@string/Tname" />
    
    <EditText 
        android:id="@+id/ettname"
        android:width="250dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/tname"
        android:layout_alignBottom="@id/tname"
        android:layout_marginLeft="30dp"
        android:editable="false"
        android:cursorVisible="false"/>
    
    <TextView
        android:id="@+id/age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        android:layout_below="@id/tname"
        android:textSize="9pt"     
        android:text="@string/age" />
    
    <EditText 
        android:id="@+id/etage"
        android:width="250dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/age"
        android:layout_alignBottom="@id/age"
        android:layout_marginLeft="30dp"
        android:editable="false"
        android:cursorVisible="false"/>
    
    <TextView
        android:id="@+id/work"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        android:layout_below="@id/age"
        android:textSize="9pt"     
        android:text="@string/work" />
    
    <EditText 
        android:id="@+id/etwork"
        android:width="250dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/work"
        android:layout_alignBottom="@id/work"
        android:layout_marginLeft="30dp"
        android:editable="false"
        android:cursorVisible="false"/>
    
    <TextView
        android:id="@+id/phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        android:layout_below="@id/work"
        android:textSize="9pt"     
        android:text="@string/phone" />
    
    <EditText 
        android:id="@+id/etphone"
        android:width="250dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/phone"
        android:layout_alignBottom="@id/phone"
        android:layout_marginLeft="30dp"
        android:editable="false"
        android:cursorVisible="false"/>
    
    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        android:layout_below="@id/phone"
        android:textSize="9pt"     
        android:text="@string/email" />
    
    <EditText 
        android:id="@+id/etemail"
        android:width="250dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/email"
        android:layout_alignBottom="@id/email"
        android:layout_marginLeft="30dp"
        android:editable="false"
        android:cursorVisible="false"/>
</RelativeLayout>
